--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,16 +1,35 @@
 body {
   font-family: 'Courier New', Courier, monospace;
-}
-
-img {
-  width: 100px;
-  height: 100px;
+  text-align: center;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
+
+img {
+  width: 100px;
+  height: 100px;
+  margin: 52px;
+}
+
+
+.container {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.info {
+  max-width: 200px;
+}
+
+/* .text {
+  align-items: flex-end;
+  justify-content: center;
+} */
 
 /* do not edit this footer */
 .footer {
