--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -4,24 +4,33 @@ body {
 }
 
 .card {
-  width: 400px;
+  padding: 8px;
   background: #fff;
   margin: 16px auto;
 }
 
 .title {
+  margin-top: 0;
+  margin-bottom: 8px;
+  font-size: 16px;
+  padding: 8px;
   background: #e3f4ff;
 }
 
 .content {
+  margin-bottom: 8px;
+  padding: 16px 8px;
   background: #e3f4ff;
 }
 
 .button-container {
+  text-align: center;
+  padding: 8px;
   background: #e3f4ff;
 }
 
 button {
-  background: white;
-  border: 1px solid #eee;
+  display: block;
+  margin: 0 auto;
+  padding: 8px 24px;
 }
